domain bugs fixes
